<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_calendar_prev"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="@color/primary"
            android:gravity="center"
            android:text="PREV"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txt_calendar_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/btn_calendar_next"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:gravity="center"
            android:text="NEXT"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:weightSum="7">

        <TextView
            style="@style/TxtCalendarMonthTitle"
            android:text="@string/monday_title"/>

        <TextView
            style="@style/TxtCalendarMonthTitle"
            android:text="@string/tuesday_title"/>

        <TextView
            style="@style/TxtCalendarMonthTitle"
            android:text="@string/wednesday_title"/>

        <TextView
            style="@style/TxtCalendarMonthTitle"
            android:text="@string/thursday_title"/>

        <TextView
            style="@style/TxtCalendarMonthTitle"
            android:text="@string/friday_title"/>

        <TextView
            style="@style/TxtCalendarMonthTitle"
            android:text="@string/saturday_title"/>

        <TextView
            style="@style/TxtCalendarMonthTitle"
            android:text="@string/sunday_title"/>

    </LinearLayout>

    <com.liuzhuang.acgridlayout.AnimateCalendarGridLayout
        android:id="@+id/acgl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>